--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="hu.dokabalazs">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="hu.dokabalazs">
+
+	<uses-feature android:name="android.hardware.camera" android:required="true"/>
 
 	<application
-		android:allowBackup="true"
-		android:fullBackupContent="@xml/backup_descriptor"
-		android:icon="@mipmap/ic_launcher"
-		android:label="@string/app_name"
-		android:roundIcon="@mipmap/ic_launcher_round"
-		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
-		<activity
-			android:name=".MainActivity"
+			android:allowBackup="true"
+			android:fullBackupContent="@xml/backup_descriptor"
+			android:icon="@mipmap/ic_launcher"
 			android:label="@string/app_name"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:roundIcon="@mipmap/ic_launcher_round"
+			android:supportsRtl="true"
+			android:theme="@style/AppTheme">
+		<activity
+				android:name=".MainActivity"
+				android:label="@string/app_name"
+				android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<action android:name="android.intent.action.VIEW" />
+				<action android:name="android.intent.action.MAIN"/>
+				<action android:name="android.intent.action.VIEW"/>
 
-				<category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
 	</application>
