Add QR code scanner

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,11 @@ dependencies {
 	implementation "android.arch.persistence.room:runtime:$room_version"
 	kapt "android.arch.persistence.room:compiler:$room_version"
 
-	testImplementation 'junit:junit:4.12'
+	implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
+
+	implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+
+	testImplementation 'junit:junit:4.13-beta-2'
 	androidTestImplementation 'com.android.support.test:runner:1.0.2'
 	androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
