--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="hu.dokabalazs">
 
 	<uses-feature android:name="android.hardware.camera" android:required="true"/>
+	<uses-permission android:name="android.permission.CAMERA"/>
 
 	<application
 			android:allowBackup="true"
