--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 
 	implementation 'me.dm7.barcodescanner:zxing:1.9.13'
 
+	implementation 'com.android.support:preference-v7:28.0.0'
+	implementation 'com.chibatching.kotpref:kotpref:2.8.0'
+
 	testImplementation 'junit:junit:4.13-beta-2'
 	androidTestImplementation 'com.android.support.test:runner:1.0.2'
 	androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
